test/TestPhases/importchecking/invalid/importRecA.blc
import I "importRecB"

module

activity Main () ()
    await true
end